# my_f

./: .gitignore  CMakeLists.txt  README.md
backend/: .env  Cargo.toml  Dockerfile  compose.yaml  dump.sql  init-roles.sql  mosquitto.conf
backend/db/: password.txt
backend/migrations/: 20240705223220_init.down.sql  20240705223220_init.up.sql  20240705224828_rename_to_image_url.up.sql  20240705225201_add_weight_colum.up.sql  20240705230223_rename_to_nutrition.up.sql  20240705230626_alter_nutrition.up.sql  20240706072006_alter_weight.up.sql  20240710161821_alter_created_at.up.sql  20240930153538_expo_push_token.up.sql
backend/src/: main.rs  util.rs
backend/src/db/: models.rs  operations.rs
backend/src/mqtt/: mod.rs  types.rs
backend/src/server/: handlers.rs  mod.rs  route.rs
hardware/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
hardware/main/: .cproject  CMakeLists.txt  app_main.c  display.c  idf_component.yml  joystick.c  mqtt.c  scan.c  util.c
main/: CMakeLists.txt  app_main.c  display.c  joystick.c  mqtt.c  scan.c  uart.c  util.c  wifi.c
main/include/: display.h  joystick.h  mqtt.h  scan.h  uart.h  wifi.h
mobile/: .gitignore  .prettierrc.json  app.json  eas.json  interfaces.ts  package-lock.json  package.json  tsconfig.json  types.ts
mobile/app/: +html.tsx  _layout.tsx
mobile/components/: ConnectionStatusBar.tsx  CustomHeader.tsx  Header.tsx  Item.tsx  ItemView.tsx  Notify.tsx  RefreshButton.tsx
mobile/constants/: layout.ts  tokens.ts
mobile/hooks/: notification.ts  useNavigationSearch.tsx
mobile/redux/: items.ts  mqtt.ts  mqttSlice.ts  store.ts
(+18 files in other folders)
