[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenv = "0.15"
futures = "0.3.30"
paho-mqtt = "0.12"
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1.27"
chrono = { version = "0.4.*", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
