[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.*", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24.0"
expo_push_notification_client = "0.4.1"
